feat: enhance email design with PNG logo attachment and update favicon
- Add PNG attachment functionality to email service
- Replace SVG with PNG logo in password reset emails for better compatibility
- Remove redundant text and enlarge logo 5x (40px → 200px)
- Center logo in email header for professional appearance
- Update background color to match logo (#F4F2E8)
- Configure favicon to use flambé logo.png for browser tab display
- Add cross-browser favicon support including Apple touch icon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+    <link rel="shortcut icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="flambé - discover recipes that match your taste, crafted with precision and passion. Thoughtfully curated culinary experiences inspired by Michelin-starred chefs and seasonal ingredients." />
     <title>flambé - thoughtfully curated recipes</title>
